Implement JavaFX support for JQwik
This adds several annotations;
	FxResource - specifices classloader and FXML resource to load.
	FxStart - Test methods called on start() of application.
	FxStop - Test methods called on stop() of application.

For now, see AddressControllerTest for a usage example.